--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
