--- a/package.json
+++ b/package.json
@@ -45,9 +45,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7"
+    "@babel/plugin-proposal-private-methods": "^7.18.6"
   }
 }
